--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,800,900&display=swap');
+
 @font-face {
   font-family: 'Bebas';
   src: url('../fonts/Bebas/BebasNeue Book.woff2') format('woff2'),
@@ -14,14 +16,211 @@
 	     url('../fonts/Lot/Lot-Regular.ttf') format('truetype');
 }
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800&display=swap');
+/*----------------------*/
+body{
+  background-color: #2C374A;
+}
+
+/*---------HOME-------------*/
+
+p{
+  font-family: 'Montserrat', Arial, sans-serif;
+  font-weight: 400;
+  color: white;
+}
+
+.home-container{
+  height: 100vh;
+  padding-top: 6rem;
+  position: relative;
+  /* overflow: hidden; */
+}
+
+.floating-work,
+.floating-about,
+.floating-contact{
+  font-family: 'Montserrat', Arial, sans-serif;
+  font-weight: 800;
+  color: white;
+  position: absolute;
+}
+
+.floating-work{
+  font-size: 7rem;
+  -webkit-transform-origin: top left;
+        -ms-transform-origin: top left;
+            transform-origin: top left;
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+  /* top: 25%; */
+  top: 45%;
+  left: 5.5rem;
+}
+
+.floating-about{
+  font-size: 5rem;
+  /* left: 72%; */
+  bottom: -3rem;
+  left: 4.5rem;
+}
+
+.portfolio-parent{
+  max-width: 37rem;
+  position: absolute;
+  background: #E57983;
+  background: -webkit-gradient(linear, left top, right top, from(#E57983), to(#EFB197));
+  background: -webkit-linear-gradient(left, #E57983, #EFB197);
+  background: -o-linear-gradient(left, #E57983, #EFB197);
+  background: linear-gradient(to right, #E57983, #EFB197);
+  padding: 2px;
+  right: 20%;
+}
+
+.portfolio-container {
+  background: #2C374A;
+  padding: 3rem 3rem 2rem;
+}
+
+.portfolio-container h1 {
+  color: white;
+  font-family: 'Lot', Arial, sans-serif;
+  text-align: center;
+  font-size: 9rem;
+  line-height: 1;
+  letter-spacing: 14px;
+}
+
+.portfolio-container h1:last-of-type{
+  margin-bottom: 0;
+  letter-spacing: 26px;
+}
+
+.portfolio-container h5 {
+  font-family: 'Montserrat', Arial, sans-serif;
+  font-weight: 300;
+  color: white;
+  position: absolute;
+}
+
+.portfolio-container h5.name{
+  top: 11rem;
+  left: 3.1rem;
+  font-size: 1.2rem;
+}
+
+.portfolio-container h5.profession{
+  top: 21.5rem;
+  right: 3.2rem;
+  font-size: 1.2rem;
+}
+
+#contact_icon {
+  overflow: hidden;
+  bottom: 20px;
+  display: block;
+  position: fixed;
+  text-align: center;
+  line-height: 12px!important;
+  right: 20px;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -o-border-radius: 50%;
+  z-index: 9994;
+  height: 50px;
+  width: 50px;
+  background-color: rgb(44, 55, 74);
+  box-shadow: 2px 2px 10px #222a38;
+}
+
+#contact_icon img{
+  width: 30px;
+  height: auto;
+  margin-bottom: 0;
+  padding-top: .8rem;
+}
+
+/*---------HOME-------------*/
+
+/*---------ABOUT-------------*/
+
+.about p{
+  padding: 5rem 0 3rem 4.5rem;
+ }
+
+.about p{
+ color: #F16475;
+}
+
+.highlighted-text{
+  color: white;
+  font-family: 'Lot', Arial, sans-serif!important;
+  font-size: 20px;
+}
+
+/*---------ABOUT-------------*/
+
+/*---------WORK-------------*/
+
+#work{
+  padding-top: 7rem;
+  position: relative;
+}
+
+/*---------WORK-------------*/
+
+/*---------CONTACT-------------*/
+
+#contact{
+	padding: 8rem 0 12rem; 
+}
+
+#contact .btn {
+	background: #E57983;
+  background: -webkit-gradient(linear, left top, right top, from(#E57983), to(#EFB197));
+  background: -webkit-linear-gradient(left, #E57983, #EFB197);
+  background: -o-linear-gradient(left, #E57983, #EFB197);
+  background: linear-gradient(to right, #E57983, #EFB197);
+	border-radius: 4px;
+  box-sizing: border-box;
+	color: #ffffff;
+	display: block;
+	font: 900 1.125rem 'Monserrat', Arial, sans-serif; /*18*/
+	height: 70px;
+	letter-spacing: 1px;
+	margin: 0 auto;
+	padding: 2px;
+	position: relative;
+  text-decoration: none;
+	text-transform: uppercase;
+	width: 264px;
+	z-index: 2;
+}
+
+#contact .btn:hover {
+	color: #fff;
+}
+
+#contact .btn span {
+	align-items: center;
+	background: #2C374A;
+	border-radius: 4px;
+	display: flex;
+	justify-content: center;
+	height: 100%;
+	transition: background .5s ease;
+	width: 100%;
+}
+
+#contact .btn:hover span {
+	background: transparent;
+}
+/*---------CONTACT-------------*/
 
 /*----------------------*/
-
-h1{
-  font-family: 'Bebas'!important;
-  font-weight: 800;
-}
 
 html {
   font-family: sans-serif;
