--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -2,18 +2,18 @@
 
 @font-face {
   font-family: 'Bebas';
-  src: url('../fonts/Bebas/BebasNeue Book.woff2') format('woff2'),
-    url('../fonts/Bebas/BebasNeue Book.woff') format('woff'),
-    url('../fonts/Bebas/BebasNeue Book.ttf') format('truetype');
+  src: url('../../fonts/Bebas/BebasNeue Book.woff2') format('woff2'),
+    url('../../fonts/Bebas/BebasNeue Book.woff') format('woff'),
+    url('../../fonts/Bebas/BebasNeue Book.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face{ 
 	font-family: 'Lot';
-	src: url('../fonts/Lot/Lot-Regular.woff') format('woff'),
-       url('../fonts/Lot/Lot-Regular.woff2') format('woff2'),
-	     url('../fonts/Lot/Lot-Regular.ttf') format('truetype');
+	src: url('../../fonts/Lot/Lot-Regular.woff') format('woff'),
+       url('../../fonts/Lot/Lot-Regular.woff2') format('woff2'),
+	     url('../../fonts/Lot/Lot-Regular.ttf') format('truetype');
 }
 
 /*----------------------*/
@@ -27,6 +27,69 @@ p{
   font-family: 'Montserrat', Arial, sans-serif;
   font-weight: 400;
   color: white;
+}
+
+
+.gradient_btn {
+	background: #E57983;
+  background: -webkit-gradient(linear, left top, right top, from(#E57983), to(#EFB197));
+  background: -webkit-linear-gradient(left, #E57983, #EFB197);
+  background: -o-linear-gradient(left, #E57983, #EFB197);
+  background: linear-gradient(to right, #E57983, #EFB197);
+	/* border-radius: 4px; */
+  box-sizing: border-box;
+  color: #ffffff;
+	display: block;
+	height: 70px;
+	letter-spacing: 1px;
+	margin: 0 auto;
+	padding: 2px;
+	position: relative;
+  text-decoration: none;
+	text-transform: uppercase;
+	z-index: 2;
+}
+
+.contact_btn{
+  width: 264px;
+}
+
+.sidebar_btn{
+  width: auto;
+  display: inline-block;
+}
+
+.gradient_btn:hover {
+	color: #fff;
+}
+
+.gradient_btn span {
+	align-items: center;
+	background: #2C374A;
+	/* border-radius: 4px; */
+	display: flex;
+	justify-content: center;
+	height: 100%;
+	transition: background .5s ease;
+  width: 100%;
+  font-family: 'Montserrat', Arial, sans-serif;
+  font-weight: 900;
+}
+
+.gradient_btn.contact_btn span {
+  padding: .5rem;
+  justify-content: center;
+  font-size: 1.125rem;
+}
+
+.gradient_btn.sidebar_btn span {
+  padding: .5rem;
+  justify-content: left;
+  font-size: 2.5rem;
+}
+
+.gradient_btn:hover span {
+	background: transparent;
 }
 
 /*----------------------*/
