--- a/src/components/imageText/imageText.module.css
+++ b/src/components/imageText/imageText.module.css
@@ -51,7 +51,7 @@
 .img{
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: left center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
