--- a/src/components/imageText/imageText.module.css
+++ b/src/components/imageText/imageText.module.css
@@ -3,7 +3,7 @@
     margin-right: auto;
     margin-left: auto;
     position: relative;
-    margin-bottom: 7rem;
+    margin-bottom: 2rem;
 }
 
 .textWrapper {
@@ -36,6 +36,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    padding: 0.5rem 1rem;
 }
 
 .alignItemsStart {
@@ -45,10 +46,11 @@
 }
 
 .oneHalf {
-    width: 60%;
+    width: 100%;
 }
 
 .img{
+    height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left center;
@@ -75,7 +77,7 @@
 }
 
 .oneHalf.halfText h2 {
-    font-size: 70px;
+    font-size: 2rem;
     display: inline-block;
     margin-bottom: 1.5rem !important;
     color: white;
@@ -111,7 +113,38 @@
     text-decoration: none;
 }
 
+@media (min-width: 576px) { 
+    .oneHalf.halfText h2 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .img{
+        height: 400px;
+    }
+
+    oneHalf.halfText h2 {
+        font-size: 2.5rem;
+    }
+
+}
+
 @media (min-width: 992px){
+
+    .containerFluid{
+        margin-bottom: 7rem;
+    }
+
+    .oneHalf {
+        width: 60%;
+    }
+
+    .img{
+        height: 600px;
+    }
+
     .oneHalf.halfText {
         position: absolute;
         top: 0;
@@ -141,6 +174,7 @@
         transform: translateY(-50%);
         max-width: 60%;
     }
+
 }
 
 @media (min-width: 1200px){
@@ -172,5 +206,9 @@
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
         max-width: 60%;
+    }
+
+    .oneHalf.halfText h2 {
+        font-size: 4rem;
     }
 }
