--- a/src/components/imageText/imageText.module.css
+++ b/src/components/imageText/imageText.module.css
@@ -53,7 +53,7 @@
     height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: left center;
+    background-position: left top;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -85,7 +85,6 @@
     padding-bottom: 10px;
     position: relative;
     font-weight: normal;
-    /* border-bottom: 3px solid #000000; */
 }
 
 .oneHalf.halfText h2:after {
@@ -120,6 +119,10 @@
 }
 
 @media (min-width: 768px) {
+
+    .img{
+        background-position: left center;
+    }
 
     .img{
         height: 400px;
