--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -37,7 +37,7 @@ p{
   background: -webkit-linear-gradient(left, #E57983, #EFB197);
   background: -o-linear-gradient(left, #E57983, #EFB197);
   background: linear-gradient(to right, #E57983, #EFB197);
-	/* border-radius: 4px; */
+	border-radius: 2px;
   box-sizing: border-box;
   color: #ffffff;
 	display: block;
@@ -69,7 +69,7 @@ p{
 .sidebar_btn li a span{
 	align-items: center;
 	background: #2C374A;
-	/* border-radius: 4px; */
+	border-radius: 4px;
 	display: flex;
 	justify-content: center;
 	height: 100%;
