--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -62,3 +62,23 @@
 	-webkit-filter: brightness(0) invert(1);
     filter: brightness(0) invert(1);
 }
+
+@media (min-width: 768px) {
+	.contact{
+		height: 100vh;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+			-ms-flex-flow: column nowrap;
+				flex-flow: column nowrap;
+		-webkit-box-align: center;
+			-ms-flex-align: center;
+				align-items: center;
+		-webkit-box-pack: center;
+			-ms-flex-pack: center;
+				justify-content: center; 
+		padding: 0;
+	}
+}
