--- a/src/components/imageText/imageText.module.css
+++ b/src/components/imageText/imageText.module.css
@@ -81,10 +81,12 @@
     display: inline-block;
     margin-bottom: 1.5rem !important;
     color: white;
-    font-family: 'Lot', Arial, sans-serif;
     padding-bottom: 10px;
     position: relative;
-    font-weight: normal;
+    font-family: 'Montserrat', Arial, sans-serif;
+    font-weight: 900;
+    /* font-family: 'Lot', Arial, sans-serif;
+    font-weight: normal; */
 }
 
 .oneHalf.halfText h2:after {
@@ -137,7 +139,7 @@
 @media (min-width: 992px){
 
     .containerFluid{
-        margin-bottom: 7rem;
+        margin-bottom: 10rem;
     }
 
     .oneHalf {
