--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -22,6 +22,7 @@ body, main{
   background-color: #2C374A;
 }
 
+body, 
 main.visuAll_page{
   background-color: #06070D;
 }
@@ -488,7 +489,7 @@ p {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.2rem;
+  margin-bottom: .8rem;
 }
 figure {
   margin-left: 0;
